--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "angular": "~1.4.4",
+    "angular-google-maps": "~2.2.0",
     "angular-ui-router": "~0.2.15",
     "angular-youtube-mb": "~1.1.0",
     "bootstrap-social": "~4.10.0"
